<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.SignUp">

    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sign_up_margin"
        android:fontFamily="@font/comfortaa"
        android:text="@string/sign_up_title"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/sign_up_email_hint"
        android:inputType="textEmailAddress"
        android:textColor="#9FBC83"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/signUpTitle" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/sign_up_password_hint"
        android:inputType="textPassword"
        android:textColor="#9FBC83"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailAddress" />

    <EditText
        android:id="@+id/passwordVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/sign_up_verify_password_hint"
        android:inputType="textPassword"
        android:textColor="#9FBC83"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        android:background="#D2DEC6"
        android:fontFamily="@font/comfortaa"
        android:text="@string/sign_up_button"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordVerify"

        />

    <Button
        android:id="@+id/Back"
        android:layout_width="87dp"
        android:layout_height="35dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="80dp"
        android:background="#D2DEC6"
        android:fontFamily="@font/comfortaa"
        android:text="@string/back_previous_page"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/emailAddress"
        app:layout_constraintEnd_toStartOf="@+id/signUpTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>