<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.Login">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/comfortaa"
        android:text="Log In"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTitle" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/login_password_hint"
        android:backgroundTint="@color/green"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailAddress" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/login_margin"
        app:layout_constraintEnd_toEndOf="@id/signUpButton"
        android:text="@string/login_login_button"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/loginButton"
        android:layout_margin="@dimen/login_margin"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login_sign_up_button"/>

    <Button
        android:id="@+id/Back"
        android:layout_width="87dp"
        android:layout_height="35dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="80dp"
        android:background="#D2DEC6"
        android:fontFamily="@font/comfortaa"
        android:text="@string/back_previous_page"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/emailAddress"
        app:layout_constraintEnd_toStartOf="@+id/loginTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>