<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".item.ItemList">

    <TextView
        android:id="@+id/shoppingListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_list_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/item_list_margin"
        android:textSize="@dimen/title_text_size" />

    <TextView
        android:id="@+id/selectedStoreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/shoppingListTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/item_list_margin" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_list_margin"
        android:hint="@string/item_list_item_search_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shoppingListRecyclerView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/addItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_margin="@dimen/item_list_margin" />

    <Button
        android:id="@+id/shopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_list_margin"
        android:layout_marginTop="8dp"
        android:text="@string/item_list_start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedStoreInfo" />

    <Button
        android:id="@+id/addItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_list_margin"
        android:layout_marginTop="8dp"
        android:text="@string/item_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>