<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".item.AddItem">

    <TextView
        android:id="@+id/addItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/title_text_size"
        android:layout_margin="40dp"
        android:text="Add Item Location" />

    <TextView
        android:id="@+id/selectStoreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addItemTitle"
        android:textSize="25sp"
        android:layout_margin="20dp"
        android:text="Select Store" />

    <fragment android:id="@+id/autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/selectStoreTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/store_search_margin"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        />

    <TextView
        android:id="@+id/itemNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/autocomplete_fragment"
        android:textSize="25sp"
        android:layout_margin="20dp"
        android:text="@string/enter_item_title" />

    <EditText
        android:id="@+id/itemNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"
        android:hint="@string/item_name_edit_hint"
        android:inputType="textAutoCorrect"
        app:layout_constraintTop_toBottomOf="@id/itemNameTitle" />

    <Button
        android:id="@+id/addItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/itemNameEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/add_item_button" />

</androidx.constraintlayout.widget.ConstraintLayout>